syntax = "proto3";

option  go_package = "hello_client/pb";

package pb;

//定义服务
service Greeter {
  //定义方法
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  // 服务端返回流式数据
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);}

//定义请求参数
message HelloRequest {
  string name = 1;
}

//定义响应参数
message HelloResponse {
  string message = 1;
}


//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/hello.proto